--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'Noto Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-display: block;
+    src: url(https://fonts.gstatic.com/s/notosans/v30/o-0IIpQlx3QUlC5A4PNr5TRA.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 * {
     font-family: 'Noto Sans', sans-serif;
 }
@@ -22,6 +31,7 @@ footer {
 
 textarea {
     resize: none;
+    border-radius: 0.5rem;
 }
 
 .nav_bar_hyperlink {
@@ -53,8 +63,6 @@ textarea {
 
     align-items: center;
     justify-content: space-between;
-
-    background-color: dimgray;
 }
 
 .nav_bar::before {
@@ -80,6 +88,12 @@ textarea {
 
     outline-offset: -4px;
     outline: gray outset 4px;
+    border-radius: 0.5rem;
+}
+
+.nav_bar_item[selected] {
+    background-color: gainsboro;
+    outline: white outset 4px;
 }
 
 .article_column_grid {
@@ -100,9 +114,12 @@ textarea {
 }
 
 .gallery {
+    padding: 1rem 1rem 1rem 1rem;
+
     background-color: gray;
     outline-offset: -4px;
     outline: darkgray inset 4px;
+    border-radius: 1rem;
 }
 
 .gallery_grid[style*="--columns"][style*="--rows"] {
@@ -122,4 +139,5 @@ textarea {
     height: 100%;
     object-fit: cover;
     outline: white outset 4px;
+    border-radius: 0.5rem;
 }
