--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,14 +1,17 @@
 @font-face {
-    font-family: 'Noto Sans';
+    font-family: "Noto Sans";
     font-style: normal;
     font-weight: 400;
     font-display: block;
-    src: url(https://fonts.gstatic.com/s/notosans/v30/o-0IIpQlx3QUlC5A4PNr5TRA.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    src: url(https://fonts.gstatic.com/s/notosans/v30/o-0IIpQlx3QUlC5A4PNr5TRA.woff2)
+        format("woff2");
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
+        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 * {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: "Noto Sans", sans-serif;
 }
 
 body {
@@ -84,16 +87,13 @@ textarea {
     text-align: center;
 
     justify-content: space-around;
-    background-color: darkgray;
+    background-color: gray;
 
-    outline-offset: -4px;
-    outline: gray outset 4px;
-    border-radius: 0.5rem;
+    border-radius: 0.5rem 0.5rem 0 0;
 }
 
 .nav_bar_item[selected] {
     background-color: gainsboro;
-    outline: white outset 4px;
 }
 
 .article_column_grid {
@@ -107,7 +107,7 @@ textarea {
     margin: 0%;
 }
 
-.article_column_grid_item>h1 {
+.article_column_grid_item > h1 {
     font-weight: 900;
     font-size: xx-large;
     margin: 0 0 0 0;
@@ -116,9 +116,7 @@ textarea {
 .gallery {
     padding: 1rem 1rem 1rem 1rem;
 
-    background-color: gray;
-    outline-offset: -4px;
-    outline: darkgray inset 4px;
+    background-color: darkgray;
     border-radius: 1rem;
 }
 
@@ -127,7 +125,7 @@ textarea {
     grid-template-columns: repeat(var(--columns), 1fr);
     grid-template-rows: repeat(var(--rows), 1fr);
     gap: 1rem 1rem;
-    aspect-ratio: calc(var(--columns)/var(--rows));
+    aspect-ratio: calc(var(--columns) / var(--rows));
 }
 
 .gallery_grid_item {
@@ -138,6 +136,5 @@ textarea {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    outline: white outset 4px;
     border-radius: 0.5rem;
 }
