--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -1,71 +1,84 @@
-@font-face {
-    font-family: "Noto Sans";
-    font-style: normal;
-    font-weight: 400;
-    font-display: block;
-    src: url(https://fonts.gstatic.com/s/notosans/v30/o-0IIpQlx3QUlC5A4PNr5TRA.woff2)
-        format("woff2");
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-        U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122,
-        U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
 * {
     font-family: "Noto Sans", sans-serif;
 }
 
+::-webkit-scrollbar {
+    width: 0.75rem;
+}
+
+::-webkit-scrollbar-track {
+    background-color: aliceblue;
+    border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: lightslategray;
+    border-radius: 0.5rem;
+    border: 0.2rem solid aliceblue;
+}
+
+h1,
+h2 {
+    margin: 0;
+}
+
 body {
-    background-color: gainsboro;
+    background-color: black;
     margin: 0;
     padding: 0;
 }
 
 header {
-    margin: 1rem 1rem 0 1rem;
+    padding: 1rem 1rem 0 1rem;
 }
 
 main {
-    margin: 1rem 1rem 1rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
+
+    background-color: gainsboro;
+    border-radius: 0.5rem 0.5rem 0 0;
+    min-height: calc(100vh - 17rem);
 }
 
 footer {
-    margin: 1rem 1rem 1rem 1rem;
+    position: relative;
+    padding: 1rem 1rem 1rem 1rem;
+
+    background-color: gainsboro;
 }
 
 textarea {
     resize: none;
     border-radius: 0.5rem;
+    border: 0;
 }
 
-.nav_bar_hyperlink {
-    text-decoration: none;
-    color: black;
-}
+.page {
+    background-color: gainsboro;
 
-.nav_bar_background {
-    background-color: black;
-
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 3em;
+    height: 100%;
+}
+
+.copyright {
+    background: transparent;
+
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
 }
 
 .nav_bar {
     display: flex;
     flex-direction: row;
 
-    padding: 0;
-    margin: 0;
-
     width: auto;
     height: 2rem;
 
     position: relative;
-
-    align-items: center;
-    justify-content: space-between;
 }
 
 .nav_bar::before {
@@ -96,6 +109,16 @@ textarea {
     background-color: gainsboro;
 }
 
+.nav_bar_item[selected]>.nav_bar_hyperlink {
+    font-weight: bold;
+}
+
+.nav_bar_hyperlink {
+    text-decoration: none;
+    color: black;
+}
+
+
 .article_column_grid {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -107,10 +130,9 @@ textarea {
     margin: 0%;
 }
 
-.article_column_grid_item > h1 {
+.article_column_grid_item>h1 {
     font-weight: 900;
     font-size: xx-large;
-    margin: 0 0 0 0;
 }
 
 .gallery {
@@ -132,9 +154,22 @@ textarea {
     margin: 0%;
 }
 
-.gallery_grid_img {
+.gallery_grid_content {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 0.5rem;
+}
+
+table {
+    direction: ltr;
+
+    background-color: darkgray;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+}
+
+th,
+td {
+    background-color: gainsboro;
 }
